@@ -338,9 +338,10 @@ This function is meant to be used with the user function defined in
   (let* ((from (mail-header-from header))
 	 (to (let ((gifa (bbdb/gnus-ignored-from-addresses)))
 	       (when (and gifa (string-match gifa from))
-		 (let* ((to (or (mail-header 'To)
-				(mail-header 'CC)
-				(mail-header 'Newsgroups))))
+		 (let* ((extras (mail-header-extra header))
+			(to (or (cdr (assoc 'To extras))
+				(cdr (assoc 'CC extras))
+				(cdr (assoc 'Newgroups extras)))))
 		   (if (and to (listp to))
 		       (cdr (car to))
 		     to)))))
